[package]
name = "ruxy"
version = "0.1.0"
authors = ["Jake Swanson <jakswa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
config = "*"
actix-cors = "*"
env_logger = "*"
tokio = { version = "*", features = ["sync"] }

[dev-dependencies]
actix-rt = "2"
tokio = "1"