[package]
name = "ruxy"
version = "0.1.0"
authors = ["Jake Swanson <jakswa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.8", features = ["rustls"] }
awc = { version = "3.0.0-beta.7" }

zip = "*"
csv = "*"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"]}
config = "*"
env_logger = "*"
rustls = "*"
tokio = { version = "*", features = ["sync"] }

tempfile = "*"

[dependencies.sqlx]
version = "^0.5"
features = [
    "runtime-actix-rustls",
    "macros",
    "sqlite",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
tokio = "1"
